@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- use a circle brush for wide GD lines (#3835)
+
 - fix segmentation fault with transparent layers containing symbols (#3834)
 
 - fix memory leak on tiled vector polygons
